src/main/java/com/illuminarean/example/error/UnknownException.java
package com.illuminarean.example.error;

public class UnknownException extends RuntimeException {

    public UnknownException(String message) {
        super(message);
    }

    public UnknownException(String message, Throwable cause) {
        super(message, cause);
    }
}
